# stimpik

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  attack.c  bmp-loader.c  config.h  stimpik.c
blackmagic/: CMakeLists.txt
blackmagic/attack/: platform.h  version.h.in
blackmagic/attack/include/: general.h  platform.h
blackmagic/attack/src/: jtag.c  platform.c  swd.c
payload/: Postprocess.cmake  main.c  payload.c  payload.ld  start.S
